# budget-planner

./: .env.example  Dockerfile  README.md  pyproject.toml  transactions.csv
data/: transactions.csv
data/uploads/: source.csv
src/: agent.py  app.py  csv_parser.py  graph.py  llm_adapter.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: index.html  transactions.html
